# mtbank-ai-transcription

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  pipeline.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: submission.md
app/: __init__.py  config.py  logging.py  main.py  runtime.py  schemas.py  service.py
app/agents/: __init__.py  base.py  classifier.py  compliance.py  llm.py  prompts.py  quality.py  summarizer.py  telemetry.py
app/asr/: __init__.py  diarizer.py  transcriber.py
app/audio/: __init__.py  loader.py  normalize.py
app/llm/: __init__.py  client.py
app/orchestration/: __init__.py  supervisor.py
deploy/: Caddyfile  digitalocean.env.example
scripts/: benchmark_analyze.py  benchmark_suite.py  compute_wer.py  create_benchmark_media.py  generate_test_audio.py  smoke_openwebui_pipeline.py
test_data/: benchmark_5min_call.json  benchmark_results.json  benchmark_results.md  call01_credit_online.json  call01_credit_online.txt  call02_halva_fraud.json  call02_halva_fraud.txt  call03_transfer_stuck.json  call03_transfer_stuck.txt  call04_compliance_risky.json  call04_compliance_risky.txt  call05_poor_quality_complaint.json  call05_poor_quality_complaint.txt  call06_unknown_nonsense.flac  call06_unknown_nonsense.json  call06_unknown_nonsense.txt  manifest.json  manifest.md  wer_results.json  wer_results.md
tests/: conftest.py  test_health.py
tests/integration/: test_api_analyze.py  test_pipeline.py  test_transcriber_smoke.py
(+17 files in other folders)
