[project]
name = "mtbank-ai-transcription"
version = "0.1.0"
description = "OpenWebUI Pipelines and FastAPI prototype for MTBank AI transcription assignment."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "faster-whisper>=1.1.0",
    "jiwer>=4.0.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "jiwer>=4.0.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.12.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
